--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+@theme {
+    --color-green-200: hsl(148, 38%, 91%);
+    --color-green-600: hsl(169, 82%, 27%);
+    --breakpoint-movile: 320px;
+}
